--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ header {
     height: 35rem;
     display: flex;
     justify-content: space-between;
+    border-radius: 2%;
 }
 body{
     background-color: rgba(247, 219, 188, 0.45)
@@ -31,12 +32,11 @@ h1{
     margin-left: 2rem;
     font-family: var(--fuentetitulos);
     color: #A64444;
-    font-size: 2.5rem;
-    
+    font-size: 2.5rem;  
 }
 
 h2, h3{
-    color: #7F8C4F;
+    color: #62754d;
 }
 
 li{
@@ -47,6 +47,7 @@ a{
     color: #A64444;
     text-decoration: none;
 }
+
 footer{
     text-align: center ;
     margin-top: 3rem;
@@ -57,7 +58,84 @@ b{
     color: #A64444;
 }
 
+.fondo-transparente{
+    width: 850px;
+    height: auto; 
+    margin: 0 auto; 
+    margin-top: 2rem;
+    text-align: center;
+    background-color: #f8dfcd;
+    border-radius: 1rem;
+    padding: 1rem;
+}
+
 img{
     width: 700px;
     border-radius: 8%;
+}
+
+.galeria{
+    margin-top: 3rem;
+    width: 800px;
+    height: auto;
+    column-count: 2;
+    column-gap: 1rem; 
+    margin: 0 auto;
+}
+.estilo:hover {
+    cursor: pointer;
+  }
+
+.estilo{  
+    width: 400px;
+    height: auto;
+    transition: transform .3s;
+}
+
+.contenedor-image {
+    position: relative;
+    overflow: hidden;
+    margin-top: 1rem;
+    border-radius: 1rem;
+  }
+  
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 100%; /* Cambiado a 100% para que esté fuera de la vista inicialmente */
+    width: 100%;
+    height: 100%;
+    background-color: #89aa63ad;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: left .3s;
+    color: white;
+    opacity: 0;
+    border-radius: 1rem;
+  }
+.overlay:hover{
+    cursor: pointer;
+  }
+  
+.descripcion {
+    text-transform: uppercase;
+  }
+  
+.galeria .contenedor-image:hover .overlay {
+    left: 0; /* Ahora inicia desde la derecha y se desplaza hacia la izquierda */
+    opacity: 1;
+  }
+iframe{
+    border-radius: 1rem;
+  }
+footer{
+    width: 850px;
+    height: auto; 
+    margin: 0 auto; 
+    margin-top: 2rem;
+    text-align: center;
+    background-color: #f8dfcd;
+    border-radius: 1rem;
+    padding: 1px;
 }
